--- a/Config/requirements.txt
+++ b/Config/requirements.txt
@@ -1,5 +1,5 @@
-asgiref==3.2.7
-Django==3.0.5
-django-widget-tweaks==1.4.8
-pytz==2020.1
-sqlparse==0.3.1
+asgiref==3.5.2
+Django==4.1.4
+Pillow==9.3.0
+sqlparse==0.4.3
+tzdata==2022.7
